@@ -5,8 +5,54 @@ export LC_ALL=C
 type=$1
 preversion=$2
 
+rm_conffile() {
+    CONFFILE="$1"
+
+    if [ -e "$CONFFILE" ]; then
+        md5sum="`md5sum \"$CONFFILE\" | sed -e \"s/ .*//\"`"
+        old_md5sum="`sed -n -e \"/^Conffiles:/,/^[^ ]/{\\\\' $CONFFILE'{s/.* //;p}}\" /var/lib/dpkg/status`"
+        if [ "$md5sum" != "$old_md5sum" ]; then
+            echo "Obsolete conffile $CONFFILE has been modified by you."
+            echo "Saving as $CONFFILE.dpkg-bak ..."
+            mv -f "$CONFFILE" "$CONFFILE".dpkg-bak
+        else
+            echo "Removing obsolete conffile $CONFFILE ..."
+            rm -f "$CONFFILE"
+        fi
+    fi
+}
+
+linux_compare_versions () {
+    verA=$(($(echo "$1" | sed 's/\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\).*/\1 \* 10000 + \2 \* 100 + \3/')))
+    verB=$(($(echo "$3" | sed 's/\([0-9]*\)\.\([0-9]*\)\.\([0-9]*\).*/\1 \* 10000 + \2 \* 100 + \3/')))
+
+    test $verA -$2 $verB
+}
+
+kfreebsd_compare_versions () {
+    verA=$(($(echo "$1" | sed 's/\([0-9]*\)\.\([0-9]*\).*/\1 \* 100 + \2/')))
+    verB=$(($(echo "$3" | sed 's/\([0-9]*\)\.\([0-9]*\).*/\1 \* 100 + \2/')))
+
+    test $verA -$2 $verB
+}
+
+kernel26_help() {
+    echo ""
+    echo "The installation of a 2.6 kernel _could_ ask you to install a new libc"
+    echo "first, this is NOT a bug, and should *NOT* be reported. In that case,"
+    echo "please add lenny sources to your /etc/apt/sources.list and run:"
+    echo "  apt-get install -t lenny linux-image-2.6"
+    echo "Then reboot into this new kernel, and proceed with your upgrade"
+}
+
 if [ "$type" = upgrade ]
 then
+    # Remove old /etc/init.d/glibc.sh init script
+    if dpkg --compare-versions "$preversion" le "2.9-22"; then
+        rm_conffile "/etc/init.d/glibc.sh"
+	update-rc.d glibc.sh remove >/dev/null
+    fi
+
     # Load debconf module if available
     if [ -f /usr/share/debconf/confmodule ] ; then
         . /usr/share/debconf/confmodule
@@ -213,11 +259,98 @@ then
       exit 1
     fi
   fi
-fi
 
-if [ "$type" != abort-upgrade ]
-then
-    # glibc kernel version check: KERNEL_VERSION_CHECK
+  # glibc kernel version check
+  system=`uname -s`
+  if [ "$system" = "Linux" ]
+  then
+      # Test to make sure z < 255, in x.y.z-n form of kernel version
+      # Also make sure we don't trip on x.y.zFOO-n form
+      kernel_rev=$(uname -r | sed 's/\([0-9]*\.[0-9]*\.\)\([0-9]*\)\(.*\)/\2/')
+      if [ "$kernel_rev" -ge 255 ]
+      then
+          echo "WARNING: Your kernel version indicates a revision number"
+          echo "of 255 or greater.  Glibc has a number of built in"
+          echo "assumptions that this revision number is less than 255."
+          echo "If you\'ve built your own kernel, please make sure that any"
+          echo "custom version numbers are appended to the upstream"
+          echo "kernel number with a dash or some other delimiter."
+
+          exit 1
+      fi
+
+      # sanity checking for the appropriate kernel on each architecture.
+      realarch=`uname -m`
+      kernel_ver=`uname -r`
+
+      # convert "armv4l" and similar to just "arm", and "mips64" and similar
+      # to just "mips"
+      case $realarch in
+        arm*) realarch="arm";;
+        mips*) realarch="mips";;
+      esac
+
+      # The GNU libc requires a >= 2.6.18 kernel (except on m68k)
+      if [ "$realarch" != m68k ]
+      then
+          if linux_compare_versions "$kernel_ver" lt 2.6.18
+          then
+              echo WARNING: this version of the GNU libc requires kernel version
+              echo 2.6.18 or later.  Please upgrade your kernel before installing
+              echo glibc.
+              kernel26_help
+
+              exit 1
+          fi
+      fi
+
+      # The GNU libc is now built with --with-kernel= >= 2.4.1 on m68k
+      if [ "$realarch" = m68k ]
+      then
+          if linux_compare_versions "$kernel_ver" lt 2.4.1
+          then
+              echo WARNING: This version of glibc requires that you be running
+              echo kernel version 2.4.1 or later.  Earlier kernels contained
+              echo bugs that may render the system unusable if a modern version
+              echo of glibc is installed.
+              kernel26_help
+
+              exit 1
+          fi
+      fi
+
+      # From glibc 2.6-3 SPARC V8 support is dropped.
+      if [ "$realarch" = sparc ]
+      then
+          # The process could be run using linux32, check for /proc.
+          if [ -f /proc/cpuinfo ]
+          then
+             case "$(sed '/^type/!d;s/^type.*: //g' /proc/cpuinfo)" in
+                 sun4u)
+                    # UltraSPARC CPU
+                    ;;
+                 sun4v)
+                    # Niagara CPU
+                    ;;
+                 *)
+                    echo "WARNING: This machine has a SPARC V8 or earlier class processor."
+                    echo "Debian lenny and later does not support such old hardware"
+                    echo "any longer."
+                    exit 1
+                    ;;
+             esac
+          fi
+      fi
+  elif [ $system = "GNU/kFreeBSD" ] ; then
+      kernel_ver=`uname -r`
+      if kfreebsd_compare_versions "$kernel_ver" lt 6.0
+      then
+          echo WARNING: This version of glibc uses UMTX_OP_WAIT and UMTX_OP_WAKE
+	    echo syscalls that are not present in the current running kernel. They
+	    echo have been added in kFreeBSD 6.0.  Your system should still work,
+	    echo but it is recommended to upgrade to a more recent version.
+      fi
+  fi
 fi
 
 #DEBHELPER#
