@@ -2,8 +2,11 @@ eglibc (2.9-23) UNRELEASED; urgency=low
 
   * debhelper.in/libc.postinst, sysdeps/depflags.pl: remove upgrade code
     for pre-etch installations.
+  * Don't ship /etc/init.d/glibc.sh anymore: the GNU libc is now smart
+    enough to print "FATAL: kernel too old" alone. This also speed up
+    the boot a bit.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 26 Jul 2009 17:13:32 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 26 Jul 2009 17:37:06 +0200
 
 eglibc (2.9-22) unstable; urgency=low
 
